Removes horizontal scroll css & adds overflow hidden to avoid bug on some cases

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -63,16 +63,6 @@ svg {
 .section {
   @apply py-14 lg:py-20;
 }
-/* Horizontal scrolling */
-.horizontal-container {
-  @apply flex min-h-screen;
-}
-.horizontal-container.with-title {
-  @apply block lg:flex min-h-[unset] lg:min-h-screen;
-}
-.panel {
-  flex: 1;
-}
 
 /* Typography */
 .intro-title {
